--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <header>
   <script src="https://raw.githubusercontent.com/processing-js/processing-js/v1.4.8/processing.js"></script>
   </header>
-  <h1>Your Sketch Title</h1>
+  <h1>Assignment 8</h1>
   <script type="text/processing" data-processing-target="mycanvas1">
   
   
