--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ void setup(){
   bullets = new ArrayList();
   myTimer = new Timer(2000);
   mySpaceShip = new SpaceShip();
-  spaceshipX = loadImage ("spaceshipX.png");
+  spaceshipX = loadImage ("https://cloud.githubusercontent.com/assets/16195601/11692595/df858480-9e65-11e5-9213-ec6954998988.png");
   galaga = loadImage ("galaga.jpg");
   alien1 = loadImage ("alien1.png");
   alien2 = loadImage ("alien2.png");
