--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ void setup(){
   myTimer = new Timer(2000);
   mySpaceShip = new SpaceShip();
   spaceshipX = loadImage ("https://cloud.githubusercontent.com/assets/16195601/11692595/df858480-9e65-11e5-9213-ec6954998988.png");
-  galaga = loadImage ("galaga.jpg");
+  galaga = loadImage ("https://cloud.githubusercontent.com/assets/16195601/11692683/7d2e92bc-9e66-11e5-9061-8c2433757c9d.jpg");
   alien1 = loadImage ("alien1.png");
   alien2 = loadImage ("alien2.png");
   alien3 = loadImage ("alien3.png");
