--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ void setup(){
   galaga = loadImage ("https://cloud.githubusercontent.com/assets/16195601/11692683/7d2e92bc-9e66-11e5-9061-8c2433757c9d.jpg");
   alien1 = loadImage ("https://cloud.githubusercontent.com/assets/16195601/11692723/bc1d8078-9e66-11e5-8a4d-c7b86fbda24b.png");
   alien2 = loadImage ("https://cloud.githubusercontent.com/assets/16195601/11692791/07449a14-9e67-11e5-8ab3-de8ee6f4a88a.png");
-  alien3 = loadImage ("alien3.png");
+  alien3 = loadImage ("https://cloud.githubusercontent.com/assets/16195601/11692822/280aa3ec-9e67-11e5-8cd4-5966850947e4.png");
 }
 
 void draw(){
