--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ void draw () {
   //sun
   fill(245, 210, 90);
   strokeWeight(0);
+  stroke(118, 182, 235);
   ellipse(1200, 50, 425, 425);
   //rays
   beginShape();
