--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@ void draw () {
   </script>
   <canvas id="mycanvas2"></canvas>
   
-  <h1><center>My First Assignment</center></h1>
+  <h1><center>Assignment 5</center></h1>
   <script type="text/processing" data-processing-target="mycanvas3"> 
   
   //R= ghost rectangle A= ghost arc E1= Eye1 E2= Ey2
