--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
   <header>
   <script src="https://raw.githubusercontent.com/processing-js/processing-js/v1.4.8/processing.js"></script>
   </header>
-  <h1><center>My First Assignment</center></h1>
+  
+  <h1><center>Final Assignment- Theme is arcade game based on color- game instructions in sketch</center></h1>
+  <script type="text/processing" data-processing-target="mycanvas4">
+  
+  </script>
+  <canvas id="mycanvas4"></canvas>
+  
+  <h1><center>My First Assignment- Theme was video games</center></h1>
   <script type="text/processing" data-processing-target="mycanvas1">
   
   void setup(){
@@ -238,7 +245,7 @@
   
   
   
-  <h1><center>Assignment 2</center></h1>
+  <h1><center>Assignment 2- Theme was sports</center></h1>
   <script type="text/processing" data-processing-target="mycanvas2">
   
   //Basic Setup
@@ -437,7 +444,7 @@ void draw () {
   </script>
   <canvas id="mycanvas2"></canvas>
   
-  <h1><center>Assignment 5 (Click Mouse for Second Scene)</center></h1>
+  <h1><center>Assignment 5- theme was halloween (Click Mouse for Second Scene)</center></h1>
   <script type="text/processing" data-processing-target="mycanvas3"> 
   
   //R= ghost rectangle A= ghost arc E1= Eye1 E2= Ey2
