--- a/index.html
+++ b/index.html
@@ -1101,5 +1101,11 @@ void update(){
   </script>
   <canvas id="mycanvas3"></canvas>
   
+  <h1><center>Final Assignment Six- Theme is Food- press r, g, or b for interaction</center></h1>
+  <script type="text/processing" data-processing-target="mycanvas5">
+  
+  </script>
+  <canvas id="mycanvas5"></canvas>
+  
   </body>
 </html>  
