--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@ boolean hit8 = false;
 
 void setup() {
   size(1400, 800);
-  crosshairs = loadImage ("Crosshairs.png"); 
+  crosshairs = loadImage ("https://cloud.githubusercontent.com/assets/16195601/11790597/3e7cee74-a262-11e5-86f6-9d9b2972f21a.png"); 
   screen = loadImage ("https://cloud.githubusercontent.com/assets/16195601/11788616/95a2cf8a-a257-11e5-8f08-9f2d5b80f2d0.jpg");
-  colorful = loadImage ("https://cloud.githubusercontent.com/assets/16195601/11790597/3e7cee74-a262-11e5-86f6-9d9b2972f21a.png");
+  colorful = loadImage ("https://cloud.githubusercontent.com/assets/16195601/11790646/7df62e80-a262-11e5-9cc5-cd59d99edcf9.jpg");
   player = new PVector(width/2, height/2);
   myTimer = new Timer(9000);
   playerSpeed = new PVector();
