--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <script src="https://raw.githubusercontent.com/processing-js/processing-js/v1.4.8/processing.js"></script>
   </header>
   
-  <h1><center>Final Assignment- Theme is arcade game based on color- game instructions in sketch</center></h1>
+  <h1><center>Assignment Eight- Theme is Retro games- game instructions in sketch</center></h1>
   <script type="text/processing" data-processing-target="mycanvas6">
   
   //where bullets will be stored
