--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ void draw(){
   }
     mySpaceShip.display();
     mySpaceShip.move();
-    //spaceshipX.resize(80, 80);
+    spaceshipX.resize(80, 80);
     image(spaceshipX, 1100, 460);
     image(spaceshipX, 1180, 460);
   }
